.k8s/apps/grimmory-config.enc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    annotations:
        kubenix/k8s-version: "1.32"
        kubenix/project-name: ze-homelab
    labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: mariadb
        app.kubernetes.io/version: 12.0.2
        helm.sh/chart: mariadb-22.0.0
    name: grimmory-mariadb
    namespace: apps
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            app.kubernetes.io/component: primary
            app.kubernetes.io/instance: grimmory-mariadb
            app.kubernetes.io/name: mariadb
            app.kubernetes.io/part-of: mariadb
    serviceName: grimmory-mariadb-headless
    template:
        metadata:
            annotations:
                checksum/configuration: 95d2dbaad515bb8b3b897d877b2b93f9fd178678799d93fc6d9692a0fd1acca6
            labels:
                app.kubernetes.io/component: primary
                app.kubernetes.io/instance: grimmory-mariadb
                app.kubernetes.io/managed-by: Helm
                app.kubernetes.io/name: mariadb
                app.kubernetes.io/part-of: mariadb
                app.kubernetes.io/version: 12.0.2
                helm.sh/chart: mariadb-22.0.0
        spec:
            affinity:
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - podAffinityTerm:
                            labelSelector:
                                matchLabels:
                                    app.kubernetes.io/component: primary
                                    app.kubernetes.io/instance: grimmory-mariadb
                                    app.kubernetes.io/name: mariadb
                            topologyKey: kubernetes.io/hostname
                          weight: 1
            automountServiceAccountToken: false
            containers:
                - env:
                    - name: BITNAMI_DEBUG
                      value: "false"
                    - name: MARIADB_ROOT_PASSWORD_FILE
                      value: /opt/bitnami/mariadb/secrets/mariadb-root-password
                    - name: MARIADB_USER
                      value: grimmory
                    - name: MARIADB_PASSWORD_FILE
                      value: /opt/bitnami/mariadb/secrets/mariadb-password
                    - name: MARIADB_DATABASE
                      value: grimmory
                    - name: MARIADB_ENABLE_SSL
                      value: "no"
                  image: docker.io/bitnami/mariadb:12.0.2-debian-12-r0
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/bash
                            - -ec
                            - |
                              password_aux="${MARIADB_ROOT_PASSWORD:-}"
                              if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                                  password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                              fi
                              mariadb-admin status -uroot -p"${password_aux}"
                    failureThreshold: 3
                    initialDelaySeconds: 120
                    periodSeconds: 10
                    successThreshold: 1
                    timeoutSeconds: 1
                  name: mariadb
                  ports:
                    - containerPort: 3306
                      name: mysql
                  readinessProbe:
                    exec:
                        command:
                            - /bin/bash
                            - -ec
                            - |
                              password_aux="${MARIADB_ROOT_PASSWORD:-}"
                              if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                                  password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                              fi
                              mariadb-admin ping -uroot -p"${password_aux}"
                    failureThreshold: 3
                    initialDelaySeconds: 30
                    periodSeconds: 10
                    successThreshold: 1
                    timeoutSeconds: 1
                  resources:
                    limits:
                        cpu: "1"
                        memory: 1Gi
                    requests:
                        cpu: 250m
                        memory: 512Mi
                  securityContext:
                    allowPrivilegeEscalation: false
                    capabilities:
                        drop:
                            - ALL
                    privileged: false
                    readOnlyRootFilesystem: true
                    runAsGroup: 1001
                    runAsNonRoot: true
                    runAsUser: 1001
                    seLinuxOptions: {}
                    seccompProfile:
                        type: RuntimeDefault
                  volumeMounts:
                    - mountPath: /bitnami/mariadb
                      name: data
                    - mountPath: /opt/bitnami/mariadb/conf/my.cnf
                      name: config
                      subPath: my.cnf
                    - mountPath: /opt/bitnami/mariadb/secrets/
                      name: mariadb-credentials
                    - mountPath: /tmp
                      name: empty-dir
                      subPath: tmp-dir
                    - mountPath: /opt/bitnami/mariadb/conf
                      name: empty-dir
                      subPath: app-conf-dir
                    - mountPath: /opt/bitnami/mariadb/tmp
                      name: empty-dir
                      subPath: app-tmp-dir
                    - mountPath: /opt/bitnami/mariadb/logs
                      name: empty-dir
                      subPath: app-logs-dir
            securityContext:
                fsGroup: 1001
                fsGroupChangePolicy: Always
                supplementalGroups: []
                sysctls: []
            serviceAccountName: grimmory-mariadb
            volumes:
                - emptyDir: {}
                  name: empty-dir
                - configMap:
                    name: grimmory-mariadb
                  name: config
                - name: mariadb-credentials
                  secret:
                    items:
                        - key: mariadb-root-password
                          path: mariadb-root-password
                        - key: mariadb-password
                          path: mariadb-password
                    secretName: grimmory-config
    updateStrategy:
        type: RollingUpdate
    volumeClaimTemplates:
        - metadata:
            labels:
                app.kubernetes.io/component: primary
                app.kubernetes.io/instance: grimmory-mariadb
                app.kubernetes.io/name: mariadb
            name: data
          spec:
            accessModes:
                - ReadWriteOnce
            resources:
                requests:
                    storage: 10Gi
            storageClassName: rook-ceph-block
sops:
    age:
        - recipient: age16yrhmz8fytj7j9ns80zl40zjcdfd3pdxh48ld7ys7veea774udtqfn9jyx
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMmIrTCtyby9WUklCS3FT
[...]
            2y49W65HMQtlUpAaC/jka2iuYWTvb2218hla9z8xKLALj+mZac6zpQ==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1jx9qu5p0ycvymrl2gykd9z3w8x8n67jxnatxs49j7qzspjr6asqqf8u35h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMVZuVTFVMi9yYUY1VWZj
[...]
            iS4rGxzfIbyKJeWwZp/UVzhdKrH+3QY7S0+7HfuZR7/OxB1yy2qK4A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1myzhwq67gu5zrfk8fvs0p7mh5fk67d20ltwqf9325ya83lm06ytsyax3j2
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NWRKNE5SbkdsTW1wY3Ez
[...]
            pDHGCLraiCExA1NkJy8eESX4FXcpXfYSvpBZ1rp3h4+52sm6C461kw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-07-25T17:34:40Z"
    mac: ENC[AES256_GCM,data:qAeHn/TcnxG2+oKevjx805RCvWUFzhqwwgqqvG89xFDeBf+6DPimg6e/4862DuRHbv/ErmIjvk1TGb/6kp6FODKSfsY0wsaGi/w2Kll04h9cNDIyPEp86tcfVKeySYeutOWohkNUFT8l3suvM6gFWgKdf4LXdkLSUL/xyON15iQ=,iv:Tyl1JkolHw4/fccppRiVGP0n4BnyNlqTF+G1e0u+pbs=,tag:6dtcdp8kjdGETPRmHJT1kg==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.10.2
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kubenix/k8s-version: "1.32"
        kubenix/project-name: ze-homelab
        lbipam.cilium.io/ips: 10.10.10.155
        lbipam.cilium.io/sharing-key: grimmory-mariadb
    labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: mariadb
        app.kubernetes.io/version: 12.0.2
        helm.sh/chart: mariadb-22.0.0
    name: grimmory-mariadb
    namespace: apps
spec:
    externalTrafficPolicy: Cluster
    ports:
        - name: mysql
          port: 3306
          protocol: TCP
          targetPort: mysql
    selector:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/name: mariadb
    sessionAffinity: None
    type: LoadBalancer
sops:
    age:
        - recipient: age16yrhmz8fytj7j9ns80zl40zjcdfd3pdxh48ld7ys7veea774udtqfn9jyx
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMmIrTCtyby9WUklCS3FT
[...]
            2y49W65HMQtlUpAaC/jka2iuYWTvb2218hla9z8xKLALj+mZac6zpQ==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1jx9qu5p0ycvymrl2gykd9z3w8x8n67jxnatxs49j7qzspjr6asqqf8u35h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMVZuVTFVMi9yYUY1VWZj
[...]
            iS4rGxzfIbyKJeWwZp/UVzhdKrH+3QY7S0+7HfuZR7/OxB1yy2qK4A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1myzhwq67gu5zrfk8fvs0p7mh5fk67d20ltwqf9325ya83lm06ytsyax3j2
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NWRKNE5SbkdsTW1wY3Ez
[...]
            pDHGCLraiCExA1NkJy8eESX4FXcpXfYSvpBZ1rp3h4+52sm6C461kw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-07-25T17:34:40Z"
    mac: ENC[AES256_GCM,data:qAeHn/TcnxG2+oKevjx805RCvWUFzhqwwgqqvG89xFDeBf+6DPimg6e/4862DuRHbv/ErmIjvk1TGb/6kp6FODKSfsY0wsaGi/w2Kll04h9cNDIyPEp86tcfVKeySYeutOWohkNUFT8l3suvM6gFWgKdf4LXdkLSUL/xyON15iQ=,iv:Tyl1JkolHw4/fccppRiVGP0n4BnyNlqTF+G1e0u+pbs=,tag:6dtcdp8kjdGETPRmHJT1kg==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.10.2
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        kubenix/k8s-version: "1.32"
        kubenix/project-name: ze-homelab
    labels:
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: mariadb
        app.kubernetes.io/version: 12.0.2
        helm.sh/chart: mariadb-22.0.0
    name: grimmory-mariadb-headless
    namespace: apps
spec:
    clusterIP: None
    ports:
        - name: mysql
          port: 3306
          protocol: TCP
          targetPort: mysql
    publishNotReadyAddresses: true
    selector:
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: mariadb
    type: ClusterIP
sops:
    age:
        - recipient: age16yrhmz8fytj7j9ns80zl40zjcdfd3pdxh48ld7ys7veea774udtqfn9jyx
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMmIrTCtyby9WUklCS3FT
[...]
            2y49W65HMQtlUpAaC/jka2iuYWTvb2218hla9z8xKLALj+mZac6zpQ==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1jx9qu5p0ycvymrl2gykd9z3w8x8n67jxnatxs49j7qzspjr6asqqf8u35h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMVZuVTFVMi9yYUY1VWZj
[...]
            iS4rGxzfIbyKJeWwZp/UVzhdKrH+3QY7S0+7HfuZR7/OxB1yy2qK4A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1myzhwq67gu5zrfk8fvs0p7mh5fk67d20ltwqf9325ya83lm06ytsyax3j2
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NWRKNE5SbkdsTW1wY3Ez
[...]
            pDHGCLraiCExA1NkJy8eESX4FXcpXfYSvpBZ1rp3h4+52sm6C461kw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-07-25T17:34:40Z"
    mac: ENC[AES256_GCM,data:qAeHn/TcnxG2+oKevjx805RCvWUFzhqwwgqqvG89xFDeBf+6DPimg6e/4862DuRHbv/ErmIjvk1TGb/6kp6FODKSfsY0wsaGi/w2Kll04h9cNDIyPEp86tcfVKeySYeutOWohkNUFT8l3suvM6gFWgKdf4LXdkLSUL/xyON15iQ=,iv:Tyl1JkolHw4/fccppRiVGP0n4BnyNlqTF+G1e0u+pbs=,tag:6dtcdp8kjdGETPRmHJT1kg==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        kubenix/k8s-version: "1.32"
        kubenix/project-name: ze-homelab
    labels:
        app.kubernetes.io/instance: grimmory-mariadb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: mariadb
        app.kubernetes.io/version: 12.0.2
        helm.sh/chart: mariadb-22.0.0
    name: grimmory-mariadb
    namespace: apps
spec:
    egress:
        - {}
    ingress:
        - ports:
            - port: 3306
            - port: 3306
    podSelector:
        matchLabels:
            app.kubernetes.io/instance: grimmory-mariadb
            app.kubernetes.io/managed-by: Helm
            app.kubernetes.io/name: mariadb
            app.kubernetes.io/version: 12.0.2
            helm.sh/chart: mariadb-22.0.0
    policyTypes:
        - Ingress
        - Egress
sops:
    age:
        - recipient: age16yrhmz8fytj7j9ns80zl40zjcdfd3pdxh48ld7ys7veea774udtqfn9jyx
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEMmIrTCtyby9WUklCS3FT
[...]
            2y49W65HMQtlUpAaC/jka2iuYWTvb2218hla9z8xKLALj+mZac6zpQ==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1jx9qu5p0ycvymrl2gykd9z3w8x8n67jxnatxs49j7qzspjr6asqqf8u35h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMVZuVTFVMi9yYUY1VWZj
[...]
            iS4rGxzfIbyKJeWwZp/UVzhdKrH+3QY7S0+7HfuZR7/OxB1yy2qK4A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1myzhwq67gu5zrfk8fvs0p7mh5fk67d20ltwqf9325ya83lm06ytsyax3j2
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NWRKNE5SbkdsTW1wY3Ez
[...]
            pDHGCLraiCExA1NkJy8eESX4FXcpXfYSvpBZ1rp3h4+52sm6C461kw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-07-25T17:34:40Z"
    mac: ENC[AES256_GCM,data:qAeHn/TcnxG2+oKevjx805RCvWUFzhqwwgqqvG89xFDeBf+6DPimg6e/4862DuRHbv/ErmIjvk1TGb/6kp6FODKSfsY0wsaGi/w2Kll04h9cNDIyPEp86tcfVKeySYeutOWohkNUFT8l3suvM6gFWgKdf4LXdkLSUL/xyON15iQ=,iv:Tyl1JkolHw4/fccppRiVGP0n4BnyNlqTF+G1e0u+pbs=,tag:6dtcdp8kjdGETPRmHJT1kg==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.10.2
